Pizza Assignment + More

--- a/Basic JavaScript Projects/Project1_expressions_alert/index.html
+++ b/Basic JavaScript Projects/Project1_expressions_alert/index.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>JavaScript Project Alert</title>
+        <script src="JS/afunc.js"></script>
     </head>
     <body>
+        <script src="JS/main.js"></script>
         <p>Hello</p>
-        <script>
-            alert("Hello there!")
-        </script>
+        <input type="number" id="num1">
+        <input type="number" id="num2">
+        <input type="button" onclick="multiply()">
     </body>
 </html>
